--- a/package.json
+++ b/package.json
@@ -8,15 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.7",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.5.0",
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-saga": "^1.1.3",
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "@types/expo": "^33.0.1",
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.3",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "react-native-typescript-transformer": "^1.2.13",
+    "typescript": "^3.8.3"
   },
   "private": true
 }
