--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
@@ -18,6 +19,8 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
     "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.8",
+    "react-navigation-stack": "^2.3.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
