--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-icons": "^3.10.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "^1.6.1",
